// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render ExpensesSummary with multiple expenses message 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling  
    $3.90
     
  </h1>
</div>
`;

exports[`render ExpensesSummary with one expense message 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling  
    $0.70
     
  </h1>
</div>
`;
